# gomoku-ai

./: .gitignore  Cargo.toml
.cargo/: config.toml
gomoku-agent/: Cargo.toml
gomoku-agent/src/: agent.rs  agent_provider.rs  agents.rs  lib.rs  nn_utils.rs  replay.rs
gomoku-agent/src/agents/: gomoku_ddqn.rs
gomoku-agent/src/agents/gomoku_ddqn/: agent.rs  model.rs  provider.rs  trainer.rs
gomoku-cli-pvp/: Cargo.toml
gomoku-cli-pvp/src/: main.rs
gomoku-core/: Cargo.toml
gomoku-core/src/: board.rs  game.rs
gomoku-core/src/board/: index_parser.rs
src/: main.rs
